--- a/_posts/2012-07-12-ubasic.md
+++ b/_posts/2012-07-12-ubasic.md
@@ -5,7 +5,7 @@ title: UBASICの動かし方
 
 [『オイラーの贈物』](/2012/06/28/book-about-the-eulers-formula/)で使われているUBASICは、DOS用に開発されたBASICですが、32bit版のWindowsのコマンドプロンプトなら動きます。残念ながら、64bit版Windows 7では動きません（参考：[UBASIC を Windows Vista/7 で動かす方法](https://web.archive.org/web/20100509060441/http://www.rkmath.rikkyo.ac.jp:80/~kida/ubasiconw7.html)）。
 
-『オイラーの贈物』は、次の機会にUBASIC以外の言語を採用したほうがいいと思いますが、[全文公開](https://web.archive.org/web/20130801060425/http://www.rkmath.rikkyo.ac.jp:80/~kida/kima.htm)されている[木田祐司・牧野潔夫『UBASICによるコンピュータ整数論』（日本評論社, 1994）](https://www.amazon.co.jp/dp/4535600147?tag=inquisitor-22)等、UBASICに特化した資料を楽しむには、やはりUBASICに動いてもらわなければなりません。
+『オイラーの贈物』は、次の機会にUBASIC以外の言語を採用したほうがいいと思いますが、[全文公開](https://web.archive.org/web/20130801060425/http://www.rkmath.rikkyo.ac.jp:80/~kida/kima.htm)されている[木田祐司・牧野潔夫『UBASICによるコンピュータ整数論』（日本評論社, 1994）](https://www.amazon.co.jp/dp/4535600147/)等、UBASICに特化した資料を楽しむには、やはりUBASICに動いてもらわなければなりません。
 
 Linuxで動くDOSエミュレータを使う方が簡単です。Ubuntuなら、[UBASIC](https://web.archive.org/web/20140303182401/http://www.rkmath.rikkyo.ac.jp:80/~kida/ubasic.htm)をダウンロード・展開したディレクトリで、次のようにすれば、UBASICが起動します。
 
